Closed Bug 259453 Opened 20 years ago Closed 20 years ago

Customized labels colors and names not imported from Mozilla Mail

Categories

(Thunderbird :: Migration, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird0.9

People

(Reporter: caspy77, Assigned: mscott)

Details

Attachments

(1 file)

When I installed Thunderbird and imported mail and settings from Mozilla Mail,
my customized label names and colors were not imported.  The names and colors
had returned to their original defaults.  I now must go back and figure out
which colors I chose and rename the labels in the correct order so the messages
are marked correctly.
This is on Version 0.8.
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.9
Attached patch the fixSplinter Review
fixed branch and trunk
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: