Bug #259453 --> Customized labels colors and names not imported from Mozilla Mail during the migration processs.